--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <h2>Cloud Stack Links</h2>
+                <a target="_bLank" href="https://maxlewisconsultantpteltd.github.io/7-Key-Fundamentals-Of-Business-Valuation-To-Understand/">https://maxlewisconsultantpteltd.github.io/7-Key-Fundamentals-Of-Business-Valuation-To-Understand/</a><br>
+                <a target="_bLank" href="https://maxlewis.s3.us-east-005.backblazeb2.com/7+Key+Fundamentals+Of+Business+Valuation+To+Understand/index.html">https://maxlewis.s3.us-east-005.backblazeb2.com/7+Key+Fundamentals+Of+Business+Valuation+To+Understand/index.html</a><br>
+                <a target="_bLank" href="https://maxlewis.s3.us-east-005.backblazeb2.com/7+Key+Fundamentals+Of+Business+Valuation+To+Understand/index.html">https://maxlewis.s3.us-east-005.backblazeb2.com/7+Key+Fundamentals+Of+Business+Valuation+To+Understand/index.html</a><br>
+                <a target="_bLank" href="https://remarkable-mousse-ae93e8.netlify.app/">https://remarkable-mousse-ae93e8.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
